objects/DRAMs__c.object
<CustomObject>
    <description>Child object of Customer Design Specification Object used for section Dram in CDS form</description>
    <fields>
        <fullName>Custom_Design_Specification__c</fullName>
        <label>Custom Design Specification</label>
        <referenceTo>Custom_Design__c</referenceTo>
        <relationshipLabel>DRAMss</relationshipLabel>
        <relationshipName>DRAMss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRAM_Name__c</fullName>
        <label>DRAM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DRAMs</label>
    <listViews>
        <fullName>UAT_10_24</fullName>
        <columns>Custom_Design_Specification__c</columns>
        <columns>NAME</columns>
        <columns>DRAM_Name__c</columns>
        <columns>Qty__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/23/2017 12:00 AM</value>
        </filters>
        <label>UAT 10/24</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DRAM-{000000}</displayFormat>
        <label>DRAMs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRAMss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>